fix sidebar overflow

--- a/style.less
+++ b/style.less
@@ -61,6 +61,7 @@
         z-index: 1;
         top: 6px;
         margin-top: 10px;
+        overflow: hidden;
 
         ul {
             list-style-type: none;
